--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,5 @@
     <string name="q8_title">Question 8</string>
     <string name="q8_content">Which brand of phone will you choose if you are going to buy a new one?</string>
     
-    <string name="q8_"
+    <string name="q9_title">Quesiton 9</string>
 </resources>
