--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">survey</string>
+    <string name="app_name">问卷</string>
 
     <string name="should_know_list" tools:ignore="StringEscaping">
         - Please be honest when making your choice. \n\n
@@ -11,7 +11,7 @@
         Which brand of phone will you choose if you are going to buy a new one?
     </string>
 
-    <string name="questionnaire_language">Language</string>
-    <string name="questionnaire_addnew">Add New</string>
-    <string name="questionnaire_Exit">Exit</string>
+    <string name="questionnaire_language">语言</string>
+    <string name="questionnaire_addnew">新建</string>
+    <string name="questionnaire_Exit">退出</string>
 </resources>
