Multi-Language done.\ Add EditorActivity

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -14,4 +14,8 @@
     <string name="questionnaire_language">语言</string>
     <string name="questionnaire_addnew">新建</string>
     <string name="questionnaire_Exit">退出</string>
+    <string name="questionnaire_dialog_title">选择语言</string>
+    <string name="confirm">确定</string>
+    <string name="open">打开</string>
+    <string name="delete">删除</string>
 </resources>
