ready to finish editor tomorrow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
 
     <string name="open">open</string>
     <string name="delete">delete</string>
+    <string name="hint_title">Input title here</string>
+    <string name="hint_options">Options here</string>
 </resources>
