--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -18,4 +18,6 @@
     <string name="confirm">确定</string>
     <string name="open">打开</string>
     <string name="delete">删除</string>
+    <string name="hint_title">输入标题</string>
+    <string name="hint_options">输入选项</string>
 </resources>
